Cleanup, keeping only maven-invoker for already existing pathfinder plugin